--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Suggests:
-    knitr,
     rmarkdown
 VignetteBuilder: knitr
 Imports:
-    bookdown
+    bookdown,
+    knitr
