--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Suggests:
-    rmarkdown
+    rmarkdown,
     stringi
 VignetteBuilder: knitr
 Imports:
